fix border overlapping, hide restart button

--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -25,7 +25,7 @@ h1 {
   margin: 30px;
   height: 400px;
   width: 400px;
-  border: 2px solid #000000;
+  border: 1px solid #000000;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
@@ -41,4 +41,5 @@ h1 {
 button {
   margin: 30px;
   padding: 10px 20px;
+  display: none;
 }
